# panda_base_sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: panda_trajectory_controller.yaml  sim_controllers.yaml
launch/: onlybase_gazebo.launch  panda_base_sim.launch
meshes/: base_link.STL  leg1.STL  leg2.STL  leg3.STL  leg4.STL  lower_plate.STL  robot_base_plate.STL  sensor.STL  upper_plate.STL
robots/: darko_plus_panda.rviz
robots/common/: franka_arm.xacro  franka_hand.xacro  utils.xacro
scripts/: interactive_marker.py
urdf/: base_panda.urdf.xacro  base_sensor_urdf.csv  base_sensor_urdf.urdf  mounting_platform.urdf.xacro  panda_arm.urdf.xacro
