<?xml version="1.0"?>
<package format="2">
  <name>panda_base_sim</name>
  <version>0.0.1</version>
  <description>A ROS package for simulating a custom robot base with a Franka Panda arm in Gazebo. The Docker setup is mentioned in the repository description.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <author email="your.email@example.com">Your Name</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>franka_gazebo</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

